--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
   },
   "dependencies": {
     "@fontsource/noto-sans": "^5.2.10",
+    "@vitejs/plugin-react": "^5.1.1",
     "dotenv": "^17.2.1",
+    "esbuild": "^0.27.0",
     "express": "^5.1.0",
     "file-saver": "^2.0.5",
     "jspdf": "^3.0.4",
@@ -99,7 +101,7 @@
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.176.0",
     "tsx": "^4.20.3",
-    "typescript": "^5.9.2",
+    "typescript": "^5.9.3",
     "vaul": "^1.1.2",
     "vite": "^7.2.4",
     "vitest": "^3.2.4"
